It successfully displaying next 5 days weather forecast can not more further for the restriction from API server side

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNikfDtgxKTAGAae4VGgN4r",
+      "authorship_tag": "ABX9TyNiVpCB9LVZvdWQ3Lq7ZrKf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -219,68 +219,10 @@
     {
       "cell_type": "code",
       "source": [
-        "# import requests\n",
-        "\n",
-        "# # Enter your API key here\n",
-        "# api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "\n",
-        "# # base_url variable to store the URL\n",
-        "# base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
-        "\n",
-        "# # Ask for the city name from the user\n",
-        "# city_name = input(\"Enter city name: \")\n",
-        "\n",
-        "# # complete_url variable to store the complete URL address\n",
-        "# complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "\n",
-        "# # Send the GET request to the API\n",
-        "# response = requests.get(complete_url)\n",
-        "\n",
-        "# # Convert the response to JSON format\n",
-        "# data = response.json()\n",
-        "\n",
-        "# # Check if the city is found in the response data\n",
-        "# if data[\"cod\"] != \"404\":\n",
-        "\n",
-        "#     # Get the list of forecasted weather data\n",
-        "#     forecast_list = data[\"list\"]\n",
-        "\n",
-        "#     # Print the weather forecast for each day\n",
-        "#     for forecast in forecast_list:\n",
-        "#         date_time = forecast[\"dt_txt\"]\n",
-        "#         temperature = forecast[\"main\"][\"temp\"]\n",
-        "#         weather_description = forecast[\"weather\"][0][\"description\"]\n",
-        "\n",
-        "#         print(\"Date & Time:\", date_time)\n",
-        "#         print(\"Temperature (in Kelvin):\", temperature)\n",
-        "#         print(\"Weather Description:\", weather_description)\n",
-        "#         print(\"-----------------------------------\")\n",
-        "\n",
-        "# else:\n",
-        "#     print(\"City not found\")\n"
-      ],
-      "metadata": {
-        "id": "7yWF2oLNJesO"
-      },
-      "execution_count": 49,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "It sucsessfully displaying next 7 days weather forecast"
-      ],
-      "metadata": {
-        "id": "uzmKz6sMJozC"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "import requests\n",
         "\n",
         "# Enter your API key here\n",
-        "api_key = \"34fde525f40d4dd2a421eb0ce530c4a0\"\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
         "\n",
         "# base_url variable to store the URL\n",
         "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
@@ -297,62 +239,305 @@
         "# Convert the response to JSON format\n",
         "data = response.json()\n",
         "\n",
-        "try:\n",
-        "    # Check if the city is found in the response data\n",
-        "    if data[\"cod\"] != \"404\":\n",
+        "# Check if the city is found in the response data\n",
+        "if data[\"cod\"] != \"404\":\n",
         "\n",
-        "        # Get the list of forecasted weather data\n",
-        "        forecast_list = data.get(\"list\")\n",
+        "    # Get the list of forecasted weather data\n",
+        "    forecast_list = data[\"list\"]\n",
         "\n",
-        "        if forecast_list is None:\n",
-        "            raise KeyError(\"'list' key not found in the response.\")\n",
+        "    # Print the weather forecast for each day\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        temperature = forecast[\"main\"][\"temp\"]\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
         "\n",
-        "        # Create a list to store the forecast data for the next 7 days\n",
-        "        forecast_data = []\n",
+        "        print(\"Date & Time:\", date_time)\n",
+        "        print(\"Temperature (in Kelvin):\", temperature)\n",
+        "        print(\"Weather Description:\", weather_description)\n",
+        "        print(\"-----------------------------------\")\n",
         "\n",
-        "        # Iterate over the forecast list and extract data for the next 7 days\n",
-        "        for forecast in forecast_list:\n",
-        "            date = forecast[\"dt_txt\"].split()[0]\n",
-        "            temperature = forecast[\"main\"][\"temp\"]\n",
-        "            weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "else:\n",
+        "    print(\"City not found\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7yWF2oLNJesO",
+        "outputId": "12a75f51-4c88-4ff6-a713-a6e58bbb5dba"
+      },
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Delhi\n",
+            "Date & Time: 2023-06-13 06:00:00\n",
+            "Temperature (in Kelvin): 309.2\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 09:00:00\n",
+            "Temperature (in Kelvin): 311.89\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 12:00:00\n",
+            "Temperature (in Kelvin): 314.14\n",
+            "Weather Description: few clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 15:00:00\n",
+            "Temperature (in Kelvin): 314.22\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 18:00:00\n",
+            "Temperature (in Kelvin): 312.14\n",
+            "Weather Description: scattered clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-13 21:00:00\n",
+            "Temperature (in Kelvin): 308.6\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 00:00:00\n",
+            "Temperature (in Kelvin): 307.23\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 03:00:00\n",
+            "Temperature (in Kelvin): 310.6\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 06:00:00\n",
+            "Temperature (in Kelvin): 314.24\n",
+            "Weather Description: few clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 09:00:00\n",
+            "Temperature (in Kelvin): 316.45\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 12:00:00\n",
+            "Temperature (in Kelvin): 315.76\n",
+            "Weather Description: few clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 15:00:00\n",
+            "Temperature (in Kelvin): 313.47\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 18:00:00\n",
+            "Temperature (in Kelvin): 305.15\n",
+            "Weather Description: few clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-14 21:00:00\n",
+            "Temperature (in Kelvin): 305.49\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 00:00:00\n",
+            "Temperature (in Kelvin): 304.99\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 03:00:00\n",
+            "Temperature (in Kelvin): 309.09\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 06:00:00\n",
+            "Temperature (in Kelvin): 313.3\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 09:00:00\n",
+            "Temperature (in Kelvin): 315.45\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 12:00:00\n",
+            "Temperature (in Kelvin): 314.32\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 15:00:00\n",
+            "Temperature (in Kelvin): 312.62\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 18:00:00\n",
+            "Temperature (in Kelvin): 309.24\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-15 21:00:00\n",
+            "Temperature (in Kelvin): 306.67\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 00:00:00\n",
+            "Temperature (in Kelvin): 305.31\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 03:00:00\n",
+            "Temperature (in Kelvin): 307.99\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 06:00:00\n",
+            "Temperature (in Kelvin): 313.14\n",
+            "Weather Description: scattered clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 09:00:00\n",
+            "Temperature (in Kelvin): 315.59\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 12:00:00\n",
+            "Temperature (in Kelvin): 312.76\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 15:00:00\n",
+            "Temperature (in Kelvin): 310.42\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 18:00:00\n",
+            "Temperature (in Kelvin): 309.38\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-16 21:00:00\n",
+            "Temperature (in Kelvin): 308.01\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 00:00:00\n",
+            "Temperature (in Kelvin): 306.67\n",
+            "Weather Description: scattered clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 03:00:00\n",
+            "Temperature (in Kelvin): 308.73\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 06:00:00\n",
+            "Temperature (in Kelvin): 312.25\n",
+            "Weather Description: clear sky\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 09:00:00\n",
+            "Temperature (in Kelvin): 313.73\n",
+            "Weather Description: scattered clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 12:00:00\n",
+            "Temperature (in Kelvin): 308.04\n",
+            "Weather Description: broken clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 15:00:00\n",
+            "Temperature (in Kelvin): 305.07\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 18:00:00\n",
+            "Temperature (in Kelvin): 306.03\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-17 21:00:00\n",
+            "Temperature (in Kelvin): 304.52\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-18 00:00:00\n",
+            "Temperature (in Kelvin): 304.82\n",
+            "Weather Description: overcast clouds\n",
+            "-----------------------------------\n",
+            "Date & Time: 2023-06-18 03:00:00\n",
+            "Temperature (in Kelvin): 300.3\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "It sucsessfully displaying next 5 days weather forecast can not more further for the restriction from API server side"
+      ],
+      "metadata": {
+        "id": "uzmKz6sMJozC"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
         "\n",
-        "            # Append the forecast data for each day to the list\n",
+        "# Enter your API key here\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "\n",
+        "# base_url variable to store the URL\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "# Ask for the city name from the user\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "\n",
+        "# complete_url variable to store the complete URL address\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "\n",
+        "# Send the GET request to the API\n",
+        "response = requests.get(complete_url)\n",
+        "\n",
+        "# Convert the response to JSON format\n",
+        "data = response.json()\n",
+        "\n",
+        "# Check if the city is found in the response data\n",
+        "if data[\"cod\"] != \"404\":\n",
+        "\n",
+        "    # Get the list of forecasted weather data\n",
+        "    forecast_list = data[\"list\"]\n",
+        "\n",
+        "    # Create a list to store the forecast data for the next 7 days\n",
+        "    forecast_data = []\n",
+        "\n",
+        "    # Iterate over the forecast list and extract data for the next 7 days\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        date = date_time.split()[0]\n",
+        "        time = date_time.split()[1]\n",
+        "        temperature = forecast[\"main\"][\"temp\"]\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "        # Check if the time is the desired time (e.g., 12:00:00)\n",
+        "        if time == \"12:00:00\":\n",
         "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
         "\n",
-        "        # Check if forecast data is available\n",
-        "        if len(forecast_data) == 0:\n",
-        "            raise ValueError(\"No forecast data available for the next 7 days.\")\n",
+        "        # Break the loop if we have collected data for the next 7 days\n",
+        "        if len(forecast_data) == 7:\n",
+        "            break\n",
         "\n",
-        "        # Print the forecast data for the next 7 days\n",
-        "        for data in forecast_data[:7]:\n",
-        "            print(\"Date:\", data[\"Date\"])\n",
-        "            print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
-        "            print(\"Weather Description:\", data[\"Weather Description\"])\n",
-        "            print(\"-----------------------------------\")\n",
+        "    # Print the forecast data for the next 7 days\n",
+        "    for data in forecast_data:\n",
+        "        print(\"Date:\", data[\"Date\"])\n",
+        "        print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
+        "        print(\"Weather Description:\", data[\"Weather Description\"])\n",
+        "        print(\"-----------------------------------\")\n",
         "\n",
-        "    else:\n",
-        "        print(\"City not found\")\n",
-        "\n",
-        "except (KeyError, ValueError) as e:\n",
-        "    print(\"Failed to retrieve weather forecast.\")\n",
-        "    print(str(e))\n"
+        "else:\n",
+        "    print(\"City not found\")\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "LXZK0j4aOkMB",
-        "outputId": "705d02b8-084b-4143-e0c0-f6398a5da6c0"
+        "outputId": "cc9aaa25-563e-4c9e-d367-663f5066a147"
       },
-      "execution_count": 57,
+      "execution_count": 61,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter city name: Kolkata\n",
-            "Failed to retrieve weather forecast.\n",
-            "\"'list' key not found in the response.\"\n"
+            "Enter city name: Goa\n",
+            "Date: 2023-06-13\n",
+            "Temperature (in Kelvin): 302.69\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-14\n",
+            "Temperature (in Kelvin): 301.44\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-15\n",
+            "Temperature (in Kelvin): 302.45\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-16\n",
+            "Temperature (in Kelvin): 303.17\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-17\n",
+            "Temperature (in Kelvin): 303.68\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n"
           ]
         }
       ]
