--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNiVpCB9LVZvdWQ3Lq7ZrKf",
+      "authorship_tag": "ABX9TyOdc8tQURZsYrvcHP+6fP6K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -55,395 +55,27 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 47,
-      "metadata": {
-        "id": "DAi7Ah4z4xNU"
-      },
-      "outputs": [],
-      "source": [
-        "# import requests\n",
-        "# import json\n",
-        "# from datetime import datetime, timedelta\n",
-        "\n",
-        "# API_KEY = '<e9e8456d9b7bd69b36f452fdeff49419>'\n",
-        "# API_KEY = '<34fde525f40d4dd2a421eb0ce530c4a0>'\n",
-        "# API_KEY = '<88FEGQqi4ytcwIeuepny5TtibyBaIA3y>'\n",
-        "\n",
-        "\n",
-        "\n",
-        "# def get_weather_forecast(location):\n",
-        "#     url = f'https://api.weatherapi.com/v1/forecast.json?key={API_KEY}&q={location}&days=7'\n",
-        "#     response = requests.get(url)\n",
-        "\n",
-        "#     if response.status_code == 200:\n",
-        "#         forecast_data = response.json()\n",
-        "#         return forecast_data\n",
-        "#     else:\n",
-        "#         print(\"Failed to retrieve weather forecast.\")\n",
-        "\n",
-        "#         return None\n",
-        "\n",
-        "# def display_weather_forecast(forecast_data):\n",
-        "#     if forecast_data is not None:\n",
-        "#         forecast_days = forecast_data['forecast']['forecastday']\n",
-        "#         print(\"Weather Forecast for the next 7 days:\")\n",
-        "#         print(\"-------------------------------------\")\n",
-        "\n",
-        "#         for day in forecast_days:\n",
-        "#             date = datetime.strptime(day['date'], \"%Y-%m-%d\")\n",
-        "#             temperature = day['day']['avgtemp_c']\n",
-        "#             condition = day['day']['condition']['text']\n",
-        "\n",
-        "#             print(f\"{date.strftime('%A')}: {temperature}°C, {condition}\")\n",
-        "#     else:\n",
-        "#         print(\"No weather forecast data available.\")\n",
-        "\n",
-        "# def save_weather_forecast(forecast_data):\n",
-        "#     if forecast_data is not None:\n",
-        "#         forecast_days = forecast_data['forecast']['forecastday']\n",
-        "\n",
-        "#         with open('weather_forecast.txt', 'w') as file:\n",
-        "#             file.write(\"Weather Forecast for the next 7 days:\\n\")\n",
-        "#             file.write(\"-------------------------------------\\n\")\n",
-        "\n",
-        "#             for day in forecast_days:\n",
-        "#                 date = datetime.strptime(day['date'], \"%Y-%m-%d\")\n",
-        "#                 temperature = day['day']['avgtemp_c']\n",
-        "#                 condition = day['day']['condition']['text']\n",
-        "\n",
-        "#                 file.write(f\"{date.strftime('%A')}: {temperature}°C, {condition}\\n\")\n",
-        "\n",
-        "#         print(\"Weather forecast saved to 'weather_forecast.txt' file.\")\n",
-        "#     else:\n",
-        "#         print(\"No weather forecast data available.\")\n",
-        "\n",
-        "\n",
-        "\n",
-        "# def get_user_location():\n",
-        "#     return input(\"Enter location: \")\n",
-        "\n",
-        "# location = get_user_location()\n",
-        "# forecast_data = get_weather_forecast(location)\n",
-        "# display_weather_forecast(forecast_data)\n",
-        "# save_weather_forecast(forecast_data)\n"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
-        "Displaying current weather data"
-      ],
-      "metadata": {
-        "id": "Uec3pe5FIhCH"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# # import required modules\n",
-        "# import requests, json\n",
-        "\n",
-        "# # Enter your API key here\n",
-        "# api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "\n",
-        "# # base_url variable to store url\n",
-        "# base_url = \"http://api.openweathermap.org/data/2.5/weather?\"\n",
-        "\n",
-        "# # Give city name\n",
-        "# city_name = input(\"Enter city name : \")\n",
-        "\n",
-        "# # complete_url variable to store\n",
-        "# # complete url address\n",
-        "# complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "\n",
-        "# # get method of requests module\n",
-        "# # return response object\n",
-        "# response = requests.get(complete_url)\n",
-        "\n",
-        "# # json method of response object\n",
-        "# # convert json format data into\n",
-        "# # python format data\n",
-        "# x = response.json()\n",
-        "\n",
-        "# # Now x contains list of nested dictionaries\n",
-        "# # Check the value of \"cod\" key is equal to\n",
-        "# # \"404\", means city is found otherwise,\n",
-        "# # city is not found\n",
-        "# if x[\"cod\"] != \"404\":\n",
-        "\n",
-        "# \t# store the value of \"main\"\n",
-        "# \t# key in variable y\n",
-        "# \ty = x[\"main\"]\n",
-        "\n",
-        "# \t# store the value corresponding\n",
-        "# \t# to the \"temp\" key of y\n",
-        "# \tcurrent_temperature = y[\"temp\"]\n",
-        "\n",
-        "# \t# store the value corresponding\n",
-        "# \t# to the \"pressure\" key of y\n",
-        "# \tcurrent_pressure = y[\"pressure\"]\n",
-        "\n",
-        "# \t# store the value corresponding\n",
-        "# \t# to the \"humidity\" key of y\n",
-        "# \tcurrent_humidity = y[\"humidity\"]\n",
-        "\n",
-        "# \t# store the value of \"weather\"\n",
-        "# \t# key in variable z\n",
-        "# \tz = x[\"weather\"]\n",
-        "\n",
-        "# \t# store the value corresponding\n",
-        "# \t# to the \"description\" key at\n",
-        "# \t# the 0th index of z\n",
-        "# \tweather_description = z[0][\"description\"]\n",
-        "\n",
-        "# \t# print following values\n",
-        "# \tprint(\" Temperature (in kelvin unit) = \" +\n",
-        "# \t\t\t\t\tstr(current_temperature) +\n",
-        "# \t\t\"\\n atmospheric pressure (in hPa unit) = \" +\n",
-        "# \t\t\t\t\tstr(current_pressure) +\n",
-        "# \t\t\"\\n humidity (in percentage) = \" +\n",
-        "# \t\t\t\t\tstr(current_humidity) +\n",
-        "# \t\t\"\\n description = \" +\n",
-        "# \t\t\t\t\tstr(weather_description))\n",
-        "\n",
-        "# else:\n",
-        "# \tprint(\" City Not Found \")\n"
-      ],
-      "metadata": {
-        "id": "JjlXnbRFH0p9"
-      },
-      "execution_count": 48,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import requests\n",
-        "\n",
-        "# Enter your API key here\n",
-        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "\n",
-        "# base_url variable to store the URL\n",
-        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
-        "\n",
-        "# Ask for the city name from the user\n",
-        "city_name = input(\"Enter city name: \")\n",
-        "\n",
-        "# complete_url variable to store the complete URL address\n",
-        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "\n",
-        "# Send the GET request to the API\n",
-        "response = requests.get(complete_url)\n",
-        "\n",
-        "# Convert the response to JSON format\n",
-        "data = response.json()\n",
-        "\n",
-        "# Check if the city is found in the response data\n",
-        "if data[\"cod\"] != \"404\":\n",
-        "\n",
-        "    # Get the list of forecasted weather data\n",
-        "    forecast_list = data[\"list\"]\n",
-        "\n",
-        "    # Print the weather forecast for each day\n",
-        "    for forecast in forecast_list:\n",
-        "        date_time = forecast[\"dt_txt\"]\n",
-        "        temperature = forecast[\"main\"][\"temp\"]\n",
-        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
-        "\n",
-        "        print(\"Date & Time:\", date_time)\n",
-        "        print(\"Temperature (in Kelvin):\", temperature)\n",
-        "        print(\"Weather Description:\", weather_description)\n",
-        "        print(\"-----------------------------------\")\n",
-        "\n",
-        "else:\n",
-        "    print(\"City not found\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "7yWF2oLNJesO",
-        "outputId": "12a75f51-4c88-4ff6-a713-a6e58bbb5dba"
-      },
-      "execution_count": 58,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter city name: Delhi\n",
-            "Date & Time: 2023-06-13 06:00:00\n",
-            "Temperature (in Kelvin): 309.2\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 09:00:00\n",
-            "Temperature (in Kelvin): 311.89\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 12:00:00\n",
-            "Temperature (in Kelvin): 314.14\n",
-            "Weather Description: few clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 15:00:00\n",
-            "Temperature (in Kelvin): 314.22\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 18:00:00\n",
-            "Temperature (in Kelvin): 312.14\n",
-            "Weather Description: scattered clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-13 21:00:00\n",
-            "Temperature (in Kelvin): 308.6\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 00:00:00\n",
-            "Temperature (in Kelvin): 307.23\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 03:00:00\n",
-            "Temperature (in Kelvin): 310.6\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 06:00:00\n",
-            "Temperature (in Kelvin): 314.24\n",
-            "Weather Description: few clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 09:00:00\n",
-            "Temperature (in Kelvin): 316.45\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 12:00:00\n",
-            "Temperature (in Kelvin): 315.76\n",
-            "Weather Description: few clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 15:00:00\n",
-            "Temperature (in Kelvin): 313.47\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 18:00:00\n",
-            "Temperature (in Kelvin): 305.15\n",
-            "Weather Description: few clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-14 21:00:00\n",
-            "Temperature (in Kelvin): 305.49\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 00:00:00\n",
-            "Temperature (in Kelvin): 304.99\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 03:00:00\n",
-            "Temperature (in Kelvin): 309.09\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 06:00:00\n",
-            "Temperature (in Kelvin): 313.3\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 09:00:00\n",
-            "Temperature (in Kelvin): 315.45\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 12:00:00\n",
-            "Temperature (in Kelvin): 314.32\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 15:00:00\n",
-            "Temperature (in Kelvin): 312.62\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 18:00:00\n",
-            "Temperature (in Kelvin): 309.24\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-15 21:00:00\n",
-            "Temperature (in Kelvin): 306.67\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 00:00:00\n",
-            "Temperature (in Kelvin): 305.31\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 03:00:00\n",
-            "Temperature (in Kelvin): 307.99\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 06:00:00\n",
-            "Temperature (in Kelvin): 313.14\n",
-            "Weather Description: scattered clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 09:00:00\n",
-            "Temperature (in Kelvin): 315.59\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 12:00:00\n",
-            "Temperature (in Kelvin): 312.76\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 15:00:00\n",
-            "Temperature (in Kelvin): 310.42\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 18:00:00\n",
-            "Temperature (in Kelvin): 309.38\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-16 21:00:00\n",
-            "Temperature (in Kelvin): 308.01\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 00:00:00\n",
-            "Temperature (in Kelvin): 306.67\n",
-            "Weather Description: scattered clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 03:00:00\n",
-            "Temperature (in Kelvin): 308.73\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 06:00:00\n",
-            "Temperature (in Kelvin): 312.25\n",
-            "Weather Description: clear sky\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 09:00:00\n",
-            "Temperature (in Kelvin): 313.73\n",
-            "Weather Description: scattered clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 12:00:00\n",
-            "Temperature (in Kelvin): 308.04\n",
-            "Weather Description: broken clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 15:00:00\n",
-            "Temperature (in Kelvin): 305.07\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 18:00:00\n",
-            "Temperature (in Kelvin): 306.03\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-17 21:00:00\n",
-            "Temperature (in Kelvin): 304.52\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-18 00:00:00\n",
-            "Temperature (in Kelvin): 304.82\n",
-            "Weather Description: overcast clouds\n",
-            "-----------------------------------\n",
-            "Date & Time: 2023-06-18 03:00:00\n",
-            "Temperature (in Kelvin): 300.3\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "It sucsessfully displaying next 5 days weather forecast can not more further for the restriction from API server side"
+        "It successfully displaying next 5 days weather forecast can not more further for the restriction from API server side"
       ],
       "metadata": {
         "id": "uzmKz6sMJozC"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task 1:\n",
+        "\n",
+        "Read the API documentation.\n",
+        "Ask the location from the user.\n",
+        "Send the request to the API to extract information such as temperature and weather conditions for the next 7 days from the current date.\n",
+        "Add error handling to handle situations such as invalid user input or failed API requests.\n",
+        "Print the information.\n"
+      ],
+      "metadata": {
+        "id": "Io9rQycETQDp"
       }
     },
     {
