Successfully displaying the weather data and stored in an separate text file

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOdc8tQURZsYrvcHP+6fP6K",
+      "authorship_tag": "ABX9TyM7gQdL0TcyGJpE1amJwuru",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -83,34 +83,18 @@
       "source": [
         "import requests\n",
         "\n",
-        "# Enter your API key here\n",
         "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "\n",
-        "# base_url variable to store the URL\n",
         "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
         "\n",
-        "# Ask for the city name from the user\n",
+        "\n",
         "city_name = input(\"Enter city name: \")\n",
-        "\n",
-        "# complete_url variable to store the complete URL address\n",
         "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "\n",
-        "# Send the GET request to the API\n",
         "response = requests.get(complete_url)\n",
-        "\n",
-        "# Convert the response to JSON format\n",
         "data = response.json()\n",
-        "\n",
-        "# Check if the city is found in the response data\n",
         "if data[\"cod\"] != \"404\":\n",
         "\n",
-        "    # Get the list of forecasted weather data\n",
         "    forecast_list = data[\"list\"]\n",
-        "\n",
-        "    # Create a list to store the forecast data for the next 7 days\n",
         "    forecast_data = []\n",
-        "\n",
-        "    # Iterate over the forecast list and extract data for the next 7 days\n",
         "    for forecast in forecast_list:\n",
         "        date_time = forecast[\"dt_txt\"]\n",
         "        date = date_time.split()[0]\n",
@@ -118,15 +102,13 @@
         "        temperature = forecast[\"main\"][\"temp\"]\n",
         "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
         "\n",
-        "        # Check if the time is the desired time (e.g., 12:00:00)\n",
+        "\n",
         "        if time == \"12:00:00\":\n",
         "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
         "\n",
-        "        # Break the loop if we have collected data for the next 7 days\n",
         "        if len(forecast_data) == 7:\n",
         "            break\n",
         "\n",
-        "    # Print the forecast data for the next 7 days\n",
         "    for data in forecast_data:\n",
         "        print(\"Date:\", data[\"Date\"])\n",
         "        print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
@@ -170,6 +152,205 @@
             "Temperature (in Kelvin): 303.68\n",
             "Weather Description: light rain\n",
             "-----------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "response = requests.get(complete_url)\n",
+        "data = response.json()\n",
+        "\n",
+        "if data[\"cod\"] != \"404\":\n",
+        "    forecast_list = data[\"list\"]\n",
+        "    forecast_data = []\n",
+        "\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        date = date_time.split()[0]\n",
+        "        time = date_time.split()[1]\n",
+        "        temperature_kelvin = forecast[\"main\"][\"temp\"]\n",
+        "        temperature_celsius = round(temperature_kelvin - 273.15, 2)\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "        if time == \"12:00:00\":\n",
+        "            forecast_data.append({\"Date\": date, \"Temperature (in Celsius)\": temperature_celsius, \"Weather Description\": weather_description})\n",
+        "\n",
+        "        if len(forecast_data) == 7:\n",
+        "            break\n",
+        "\n",
+        "    for data in forecast_data:\n",
+        "        print(\"Date:\", data[\"Date\"])\n",
+        "        print(\"Temperature (in Celsius):\", data[\"Temperature (in Celsius)\"])\n",
+        "        print(\"Weather Description:\", data[\"Weather Description\"])\n",
+        "        print(\"-----------------------------------\")\n",
+        "\n",
+        "else:\n",
+        "    print(\"City not found\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lEwY-Xa1VhwA",
+        "outputId": "b651d2cf-fc92-4444-82d9-12e4c84732c6"
+      },
+      "execution_count": 66,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Mumbai\n",
+            "Date: 2023-06-13\n",
+            "Temperature (in Celsius): 30.42\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-14\n",
+            "Temperature (in Celsius): 29.97\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-15\n",
+            "Temperature (in Celsius): 29.91\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-16\n",
+            "Temperature (in Celsius): 30.02\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n",
+            "Date: 2023-06-17\n",
+            "Temperature (in Celsius): 30.19\n",
+            "Weather Description: light rain\n",
+            "-----------------------------------\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "response = requests.get(complete_url)\n",
+        "data = response.json()\n",
+        "\n",
+        "if data[\"cod\"] != \"404\":\n",
+        "    forecast_list = data[\"list\"]\n",
+        "    forecast_data = []\n",
+        "    forecast_dates = set()\n",
+        "\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        date = date_time.split()[0]\n",
+        "        time = date_time.split()[1]\n",
+        "        temperature = forecast[\"main\"][\"temp\"]\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "        if date not in forecast_dates and time == \"12:00:00\":\n",
+        "            forecast_dates.add(date)\n",
+        "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
+        "\n",
+        "        if len(forecast_data) == 7:\n",
+        "            break\n",
+        "\n",
+        "    filename = f\"forecast_{city_name}.txt\"\n",
+        "    with open(filename, \"w\") as file:\n",
+        "        file.write(\"Date\\tTemperature (in Kelvin)\\tWeather Description\\n\")\n",
+        "        for data in forecast_data:\n",
+        "            file.write(f\"{data['Date']}\\t{data['Temperature (in Kelvin)']}\\t{data['Weather Description']}\\n\")\n",
+        "\n",
+        "    print(f\"Forecast data saved in file: {filename}\")\n",
+        "else:\n",
+        "    print(\"City not found\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uX-Y8f_oUpNm",
+        "outputId": "b3abea2a-7e8f-4b2a-b406-d550b328f344"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Digha\n",
+            "Forecast data saved in file: forecast_Digha.txt\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import requests\n",
+        "\n",
+        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
+        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
+        "\n",
+        "city_name = input(\"Enter city name: \")\n",
+        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
+        "response = requests.get(complete_url)\n",
+        "data = response.json()\n",
+        "\n",
+        "if data[\"cod\"] != \"404\":\n",
+        "    forecast_list = data[\"list\"]\n",
+        "    forecast_data = []\n",
+        "\n",
+        "    for forecast in forecast_list:\n",
+        "        date_time = forecast[\"dt_txt\"]\n",
+        "        date = date_time.split()[0]\n",
+        "        time = date_time.split()[1]\n",
+        "        temperature_kelvin = forecast[\"main\"][\"temp\"]\n",
+        "        temperature_celsius = round(temperature_kelvin - 273.15, 2)\n",
+        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
+        "\n",
+        "        if time == \"12:00:00\":\n",
+        "            forecast_data.append({\"Date\": date, \"Temperature (in Celsius)\": temperature_celsius, \"Weather Description\": weather_description})\n",
+        "\n",
+        "        if len(forecast_data) == 7:\n",
+        "            break\n",
+        "\n",
+        "    file_name = f\"forecast_{city_name}.txt\"\n",
+        "    with open(file_name, \"w\") as file:\n",
+        "        file.write(\"Date\\tTemperature (in Celsius)\\tWeather Description\\n\")\n",
+        "        for data in forecast_data:\n",
+        "            file.write(f\"{data['Date']}\\t{data['Temperature (in Celsius)']}\\t{data['Weather Description']}\\n\")\n",
+        "\n",
+        "    print(\"Weather forecast saved to\", file_name)\n",
+        "else:\n",
+        "    print(\"City not found\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JyB76vjFVHNA",
+        "outputId": "95f603fd-cd8d-4367-dece-f679ec7d7a9d"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter city name: Goa\n",
+            "Weather forecast saved to forecast_Goa.txt\n"
           ]
         }
       ]
