All complete (Task2 and Task2)

--- a/Weather_Forecast.ipynb
+++ b/Weather_Forecast.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM7gQdL0TcyGJpE1amJwuru",
+      "authorship_tag": "ABX9TyNSJUEojxGiK5vpurhX0j2M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,6 +25,21 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/aritradey-CS/Forecast-Table-Generator/blob/master/Weather_Forecast.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Task 1:\n",
+        "\n",
+        "Read the API documentation.\n",
+        "Ask the location from the user.\n",
+        "Send the request to the API to extract information such as temperature and weather conditions for the next 7 days from the current date.\n",
+        "Add error handling to handle situations such as invalid user input or failed API requests.\n",
+        "Print the information.\n"
+      ],
+      "metadata": {
+        "id": "Io9rQycETQDp"
+      }
     },
     {
       "cell_type": "code",
@@ -50,108 +65,6 @@
             "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests) (2022.12.7)\n",
             "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests) (2.0.12)\n",
             "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests) (3.4)\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "It successfully displaying next 5 days weather forecast can not more further for the restriction from API server side"
-      ],
-      "metadata": {
-        "id": "uzmKz6sMJozC"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "Task 1:\n",
-        "\n",
-        "Read the API documentation.\n",
-        "Ask the location from the user.\n",
-        "Send the request to the API to extract information such as temperature and weather conditions for the next 7 days from the current date.\n",
-        "Add error handling to handle situations such as invalid user input or failed API requests.\n",
-        "Print the information.\n"
-      ],
-      "metadata": {
-        "id": "Io9rQycETQDp"
-      }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import requests\n",
-        "\n",
-        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
-        "\n",
-        "\n",
-        "city_name = input(\"Enter city name: \")\n",
-        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "response = requests.get(complete_url)\n",
-        "data = response.json()\n",
-        "if data[\"cod\"] != \"404\":\n",
-        "\n",
-        "    forecast_list = data[\"list\"]\n",
-        "    forecast_data = []\n",
-        "    for forecast in forecast_list:\n",
-        "        date_time = forecast[\"dt_txt\"]\n",
-        "        date = date_time.split()[0]\n",
-        "        time = date_time.split()[1]\n",
-        "        temperature = forecast[\"main\"][\"temp\"]\n",
-        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
-        "\n",
-        "\n",
-        "        if time == \"12:00:00\":\n",
-        "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
-        "\n",
-        "        if len(forecast_data) == 7:\n",
-        "            break\n",
-        "\n",
-        "    for data in forecast_data:\n",
-        "        print(\"Date:\", data[\"Date\"])\n",
-        "        print(\"Temperature (in Kelvin):\", data[\"Temperature (in Kelvin)\"])\n",
-        "        print(\"Weather Description:\", data[\"Weather Description\"])\n",
-        "        print(\"-----------------------------------\")\n",
-        "\n",
-        "else:\n",
-        "    print(\"City not found\")\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "LXZK0j4aOkMB",
-        "outputId": "cc9aaa25-563e-4c9e-d367-663f5066a147"
-      },
-      "execution_count": 61,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter city name: Goa\n",
-            "Date: 2023-06-13\n",
-            "Temperature (in Kelvin): 302.69\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date: 2023-06-14\n",
-            "Temperature (in Kelvin): 301.44\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date: 2023-06-15\n",
-            "Temperature (in Kelvin): 302.45\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date: 2023-06-16\n",
-            "Temperature (in Kelvin): 303.17\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n",
-            "Date: 2023-06-17\n",
-            "Temperature (in Kelvin): 303.68\n",
-            "Weather Description: light rain\n",
-            "-----------------------------------\n"
           ]
         }
       ]
@@ -235,65 +148,16 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [
-        "import requests\n",
+        "Task 2:\n",
         "\n",
-        "api_key = \"e9e8456d9b7bd69b36f452fdeff49419\"\n",
-        "base_url = \"http://api.openweathermap.org/data/2.5/forecast?\"\n",
-        "\n",
-        "city_name = input(\"Enter city name: \")\n",
-        "complete_url = base_url + \"appid=\" + api_key + \"&q=\" + city_name\n",
-        "response = requests.get(complete_url)\n",
-        "data = response.json()\n",
-        "\n",
-        "if data[\"cod\"] != \"404\":\n",
-        "    forecast_list = data[\"list\"]\n",
-        "    forecast_data = []\n",
-        "    forecast_dates = set()\n",
-        "\n",
-        "    for forecast in forecast_list:\n",
-        "        date_time = forecast[\"dt_txt\"]\n",
-        "        date = date_time.split()[0]\n",
-        "        time = date_time.split()[1]\n",
-        "        temperature = forecast[\"main\"][\"temp\"]\n",
-        "        weather_description = forecast[\"weather\"][0][\"description\"]\n",
-        "\n",
-        "        if date not in forecast_dates and time == \"12:00:00\":\n",
-        "            forecast_dates.add(date)\n",
-        "            forecast_data.append({\"Date\": date, \"Temperature (in Kelvin)\": temperature, \"Weather Description\": weather_description})\n",
-        "\n",
-        "        if len(forecast_data) == 7:\n",
-        "            break\n",
-        "\n",
-        "    filename = f\"forecast_{city_name}.txt\"\n",
-        "    with open(filename, \"w\") as file:\n",
-        "        file.write(\"Date\\tTemperature (in Kelvin)\\tWeather Description\\n\")\n",
-        "        for data in forecast_data:\n",
-        "            file.write(f\"{data['Date']}\\t{data['Temperature (in Kelvin)']}\\t{data['Weather Description']}\\n\")\n",
-        "\n",
-        "    print(f\"Forecast data saved in file: {filename}\")\n",
-        "else:\n",
-        "    print(\"City not found\")\n"
+        "Modify the code to create a new file with the name in the format “forecase_<location>”\n",
+        "Write the extracted information in the new file in a tabular manner.\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "uX-Y8f_oUpNm",
-        "outputId": "b3abea2a-7e8f-4b2a-b406-d550b328f344"
-      },
-      "execution_count": 63,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter city name: Digha\n",
-            "Forecast data saved in file: forecast_Digha.txt\n"
-          ]
-        }
-      ]
+        "id": "Tu_3qlDwWnp4"
+      }
     },
     {
       "cell_type": "code",
@@ -341,19 +205,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JyB76vjFVHNA",
-        "outputId": "95f603fd-cd8d-4367-dece-f679ec7d7a9d"
+        "outputId": "f7116def-e158-459a-d0d3-1792f08a83ae"
       },
-      "execution_count": 64,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Enter city name: Goa\n",
-            "Weather forecast saved to forecast_Goa.txt\n"
+            "Enter city name: Kolkata\n",
+            "Weather forecast saved to forecast_Kolkata.txt\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        " **It Successfully displaying the weather forecast data and stored in an separate text file, the data is of next 5 days weather forecast it can not go more further for the restriction from API server side**"
+      ],
+      "metadata": {
+        "id": "uzmKz6sMJozC"
+      }
     }
   ]
 }
